--- a/Assets/index.html
+++ b/Assets/index.html
@@ -10,6 +10,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"> 
 </head>
 <body>
-    
+    <!-- NAVIGATION BAR -->
+     <SECTION ID="NAV-BAR">
+        <div ID="NAME">
+        <i class="bi bi-person-circle"></i>  
+       <span>Login</span>
+       </div>
+  
+        <div>
+            <i class="bi bi-cart-fill"></i>
+            <span>Cart</span>
+        </div>
+        <div ID="HEAD-SET">
+            <i class="bi bi-headset"></i>
+            <SPAN>Support</SPAN>
+        </div>
+     </SECTION>
 </body>
 </html>
